count number fixed on mobile

--- a/style.css
+++ b/style.css
@@ -176,6 +176,5 @@ header {
 @media (max-width: 768px) { /* mobile */
     .counter .count {
         font-size: 14px;
-        transform: translateY(-1px);
     }
 }
